# prl-trainer

./: .env.example  .gitignore  PROGRESS.md  README.md  pyproject.toml  test_merkle_fast.py
scripts/: run_v4_pod.sh  setup_tpu_vm.sh  setup_v4_pod.sh  stop_trainer.sh  stop_v4_pod.sh
src/prl_miner_tpu/: __init__.py  __main__.py  app.py  args.py  bench.py  merkle.py  merkle_fast.py  noise.py  plain_proof.py  reference.py  selftest.py  stratum.py  worker.py
src/prl_miner_tpu/tpu/: __init__.py  blake3_jax.py  challenge.py  miner.py  noise_jax.py  noisy_gemm.py  tiled_scan.py
tests/: test_bitexact.py  test_blake3_jax.py  test_challenge.py  test_multi_device.py  test_noise_jax.py  test_tiled_scan.py  test_tpu_miner.py
